--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -252,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2132f1bfe88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21330ebaf08>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -285,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2132ec6f748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21330f82448>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2132c9f7dc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21330e14048>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -760,7 +760,8 @@
     }
    ],
    "source": [
-    "df.groupby(\"trust\").describe()"
+    "aa = df[\"trust\"].filter(lambda x: )\n",
+    ".groupby(\"trust\").describe()"
    ]
   },
   {
