--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -936,6 +936,34 @@
     "df.groupby([\"age\"])[\"easy_information\"].describe()\n",
     "df[df[\"age\"] == \"Entre 30 y 40 años\"][\"easy_information\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Por edades y profesion,\n",
+    " Para generar un pedido tuvo que navegar varias veces por la misma pantalla? AGE, EDUCATION, NAVIGATION\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Por edades, tamaño de letra. AGE, FONT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Info de forma clara, por edad y profesion. AGE, EDUCATION, comprehensible"
+   ]
   }
  ],
  "metadata": {
