--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -475,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e7b5e68948>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e7b78cf788>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -501,7 +501,6 @@
    ],
    "source": [
     "age_edutacion_area = df[[\"age\", \"education\", \"area\"]].dropna()\n",
-    "#age_edutacion_area.plot(kind=\"scatter\",x=\"age\",y=\"education\")\n",
     "age_edutacion_area.groupby([\"education\", \"age\"]).size().plot.barh()"
    ]
   },
@@ -924,15 +923,6 @@
    "source": [
     "Por edades y profesion,\n",
     " Para generar un pedido tuvo que navegar varias veces por la misma pantalla? AGE, EDUCATION, NAVIGATION\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Por edades, tamaño de letra. AGE, FONT"
    ]
   },
   {
